Bug #23762 partition.test fails (partition_hash, partition_pruning as well)
Submitted: 30 Oct 2006 7:18 Modified: 6 Nov 2006 14:45
Reporter: Ramil Kalimullin Email Updates:
Status: Closed
Category:Server: Tests Severity:S2 (Serious)
Version:bk 5.1-maint OS:
Assigned to: Ramil Kalimullin Target Version:

[30 Oct 2006 7:18] Ramil Kalimullin
Description:
partition                      [ fail ]

Errors are (from /dev/shm/var-n_stm-100/log/mysqltest-time) :
mysqltest: Result length mismatch
(the last lines may be the most important ones)
Below are the diffs between actual and expected results:
-------------------------------------------------------
*** r/partition.result	2006-10-27 17:39:37.000000000 +0300
--- r/partition.reject	2006-10-27 18:23:43.000000000 +0300
***************
*** 924,930 ****
  2
  explain partitions select * from t1 where a is null or a < 0 or a > 1;
  id	select_type	table	partitions	type	possible_keys	key	key_len	ref	rows	Extra
! 1	SIMPLE	t1	pn,p2	ALL	NULL	NULL	NULL	NULL	2	Using where
  drop table t1;
  CREATE TABLE t1 (id INT NOT NULL PRIMARY KEY, name VARCHAR(20)) 
  ENGINE=MyISAM DEFAULT CHARSET=latin1
--- 924,930 ----
  2
  explain partitions select * from t1 where a is null or a < 0 or a > 1;
  id	select_type	table	partitions	type	possible_keys	key	key_len	ref	rows	Extra
! 1	SIMPLE	t1	pn,p1,p2	ALL	NULL	NULL	NULL	NULL	3	Using where
  drop table t1;
  CREATE TABLE t1 (id INT NOT NULL PRIMARY KEY, name VARCHAR(20)) 
  ENGINE=MyISAM DEFAULT CHARSET=latin1
-------------------------------------------------------

How to repeat:
run the test.
[30 Oct 2006 9:57] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/14540

ChangeSet@1.2338, 2006-10-30 13:58:20+04:00, ramil@mysql.com +1 -0
  Fix for bug #23762: partition.test fails (partition_hash, partition_pruning as well)
  
  When a partition table is used we have to initialize key_part->flag in the 
  create_partition_index_descr() as it's checked in the get_mm_leaf().
[2 Nov 2006 13:10] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/14742

ChangeSet@1.2338, 2006-11-02 17:11:53+04:00, ramil@mysql.com +2 -0
  Fix for bug #23762: partition.test fails (partition_hash, partition_pruning as well)
  
  When partition pruning is used we have to initialize key_part->flag in the 
  create_partition_index_descr() as it's checked in the get_mm_leaf().
[6 Nov 2006 14:45] Paul DuBois
Test suite change. No changelog entry needed.