Fix for bug #23762: partition.test fails (partition_hash, partition_pruning as well)

When partition pruning is used we have to initialize key_part->flag in the 
create_partition_index_descr() as it's checked in the get_mm_leaf().